# CppMasters

COW-string/: CMakeLists.txt  README.md
COW-string/Test/: CMakeLists.txt  Test.cpp
COW-string/include/greatstr/: GreatStr.h
COW-string/lib/greatstr/: CMakeLists.txt  GreatStr.cpp
COW-string/main/: main.cpp
